--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </header>
             <main>
                 <div class="location">
-                    <input type="text" name="" id="" placeholder="Paris, Belleville">
+                    <input type="text" name="location" id="location" placeholder="Paris, Belleville">
                 </div>
                 <div class="explorer">
                     <div class="explorer-text">
@@ -39,25 +39,25 @@
                         <div class="step-a">
                             <div class="step-a1">
                                 <p>Choisissez un restaurant</p>
-                            </div>
-                            <div class="step-a2">
-                                <p>1</p>
+                                <div class="step-a2">
+                                    <p>1</p>
+                                </div>
                             </div>                            
                         </div>
                         <div class="step-b">
                             <div class="step-b1">
                                 <p>Composez votre menu</p>
-                            </div>
-                            <div class="step-b2">
-                                <p>2</p>
+                                <div class="step-b2">
+                                    <p>2</p>
+                                </div>
                             </div>                            
                         </div>
                         <div class="step-c">
                             <div class="step-c1">
                                 <p>Dégustez au restaurant</p>
-                            </div>
-                            <div class="step-c2">
-                                <p>3</p>
+                                <div class="step-c2">
+                                    <p>3</p>
+                                </div>
                             </div>
                         </div>
                     </div>                    
@@ -65,48 +65,72 @@
                 <div class="restaurants-list" id="restaurants-list">
                     <h2>Restaurants</h2>
                     <div class="restaurants">
-                        <a href="./restaurants/menu-la-palette-du-gout.html">
-                            <div class="card-restaurant">
-                                <div class="img-restaurant">
-                                    <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">                                  
-                                    <div class="new1">
-                                        <p>Nouveau</p>
-                                    </div>                               
-                                </div>
-                                <h3>La palette du goût</h3>
-                                <p>Ménilmontant</p>
-                            </div>
-                        </a>
-                        <a href="./restaurants/menu-la-note-enchantee.html">
-                            <div class="card-restaurant">
-                                <div class="img-restaurant">
-                                    <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">
-                                    <div class="new2">
-                                        <p>Nouveau</p>
+                        <section class="restaurants-new">
+                            <a href="./restaurants/menu-la-palette-du-gout.html">
+                                <article class="card-restaurant">
+                                    <div class="img-restaurant">
+                                        <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">                                  
+                                        <div class="new1">
+                                            <p>Nouveau</p>
+                                        </div>                               
+                                    </div>
+                                    <div class="card-restaurant-title">
+                                        <h3>La palette du goût</h3>
+                                        <p>Ménilmontant</p>
+                                        <div class="heart-position">
+                                            <button class="heart"></button>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                            <a href="./restaurants/menu-la-note-enchantee.html">
+                                <article class="card-restaurant">
+                                    <div class="img-restaurant">
+                                        <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">
+                                        <div class="new2">
+                                            <p>Nouveau</p>
+                                        </div>                                
+                                    </div>
+                                    <div class="card-restaurant-title">
+                                        <h3>La note enchantée</h3>
+                                        <p>Charonne</p>
+                                        <div class="heart-position">
+                                            <button class="heart"></button>
+                                        </div>
                                     </div>                                
-                                </div>
-                                <h3>La note enchantée</h3>
-                                <p>Charonne</p>                                
-                            </div>
-                        </a>
-                        <a href="./restaurants/menu-a-la-francaise.html">
-                            <div class="card-restaurant">
-                                <div class="img-restaurant">
-                                    <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">
-                                </div>
-                                <h3>À la française</h3>
-                                <p>Cité Rouge</p>
-                            </div>
-                        </a>
-                        <a href="./restaurants/menu-le-delice-des-sens.html">
-                            <div class="card-restaurant">
-                                <div class="img-restaurant">
-                                    <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">
-                                </div>
-                                <h3>Le délice des sens</h3>
-                                <p>Folie-Méricourt</p>
-                            </div>
-                        </a>
+                                </article>
+                            </a>
+                        </section>
+                        <section class="restaurants-panel">
+                            <a href="./restaurants/menu-a-la-francaise.html">
+                                <article class="card-restaurant">
+                                    <div class="img-restaurant">
+                                        <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">
+                                    </div>
+                                    <div class="card-restaurant-title">
+                                        <h3>À la française</h3>
+                                        <p>Cité Rouge</p>
+                                        <div class="heart-position">
+                                            <button class="heart"></button>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                            <a href="./restaurants/menu-le-delice-des-sens.html">
+                                <article class="card-restaurant">
+                                    <div class="img-restaurant">
+                                        <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">
+                                    </div>
+                                    <div class="card-restaurant-title">
+                                        <h3>Le délice des sens</h3>
+                                        <p>Folie-Méricourt</p>
+                                        <div class="heart-position">
+                                            <button class="heart"></button>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                        </section>
                     </div>
                 </div>
             </main>
