--- a/restaurants/menu-la-note-enchantee.html
+++ b/restaurants/menu-la-note-enchantee.html
@@ -233,13 +233,13 @@
                     <div class="footer-links">
                         <div class="footer-link-logo">
                             <div class="footer-link-logo-submit"></div>
-                            <a class="footer-link-submit" href="../coming-soon.html">Proposer un restaurant</a>
+                            <a class="footer-link-submit" href="../404/coming-soon.html">Proposer un restaurant</a>
                         </div>
                         <div class="footer-link-logo">
                             <div class="footer-link-logo-partner"></div>
-                            <a class="footer-link-partner" href="../coming-soon.html">Devenir partenaire</a>
+                            <a class="footer-link-partner" href="../404/coming-soon.html">Devenir partenaire</a>
                         </div>
-                        <a href="../coming-soon.html">Mention légales</a>
+                        <a href="../404/coming-soon.html">Mention légales</a>
                         <a href="mailto:contact@ohmyfood.com">Contact</a> 
                     </div>
                 </div>
